--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -79,7 +79,7 @@
 	 <a href="https://ku.edu/" class="navbar-right"><img src="kansas-jayhawks-profile.jpg" style="width:45px;height:51px"></a>	     
      </ul>
      </div>
-    </nav>
+     </nav>
        <div class="w3-container">
        <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
@@ -102,25 +102,28 @@
 	 </tr>		 
      	    <th scope="col" style="text-align:center">Time Presented: <br> Time Allotted = +2; <br> < Time Allotted = +0.5</th>
     	    <th scope="col" style="text-align:center">Most Geometric Shapes; +2</th>
-	        <th scope="col" style="text-align:center">Most Questions Asked by Audience; +1</th>
-	        <th scope="col" style="text-align:center">Most Standard Deviation Graphs; +2</th>
-	        <th scope="col" style="text-align:center">Most Arrows Used to Point to Other Items; +1</th>
+	    <th scope="col" style="text-align:center">Most Questions Asked by Audience; +1</th>
+	    <th scope="col" style="text-align:center">Most Standard Deviation Graphs; +2</th>
+	    <th scope="col" style="text-align:center">Most Arrows Used to Point to Other Items; +1</th>
 	 </tr>    
-</table>
-  <a href="thehunt.pdf" style="color:white"><u>The Hunt pdf View</u></a>		    
-<br><br><br><br>
-<button type="button" class="btn btn-primary btn-sm" style="float:right" onclick="scrollWin()">
+    </table>
+    <a href="thehunt.pdf" style="color:white"><u>The Hunt pdf View</u></a>		    
+    <br><br><br><br>
+    <button type="button" class="btn btn-primary btn-sm" style="float:right" onclick="scrollWin()">
           <span class="glyphicon glyphicon-arrow-up"></span> Top
-        </button>	       	
-	       <script>
-		       function scrollWin(){
-			       window.scrollTo(0, 0);}</script>
-  <div class="flex-container">
+    </button>	       	
+    <script>
+       function scrollWin()
+       {
+       	     window.scrollTo(0, 0);
+       }
+    </script>
+    <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
-       </div>
-        </div>
-        </div>
-	 </div>	       
+    </div>
+    </div>
+    </div>
+    </div>	       
 </body>
 </html>
