--- a/rules.html
+++ b/rules.html
@@ -27,6 +27,15 @@
     {
         min-height: 100%;
     }
+    #myBtn
+    {
+	display: none; 
+	position: fixed;
+     }
+     #myBtn:hover
+	{
+		background-color: #555;
+	}
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -73,7 +82,8 @@
         <ul class="nav navbar-nav navbar-right">
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
+            <a href="https://ku.edu/" class="navbar-right"><img src="kansas-jayhawks-profile.jpg" style="width:45px;height:51px"></a>
+	</ul>
       </div>   
       </nav>
     <div class="w3-container">
@@ -212,29 +222,29 @@
      <ul>
          <li style="margin-left:50px;color:white;font-size:25px">A tie within an Event is settled by evenly distributing 100GP to each winner</li>
      </ul>
-    <script>
-    $(document).ready(function(){
-
-	var elm_class = '.gotop'; // Adjust this accordingly. 
-
-	//Check to see if the window is top if not then display button
-	$(window).scroll(function(){
-		if ($(this).scrollTop() > 300) { // 300px from top
-			$(elm_class).fadeIn();
-		} else {
-			$(elm_class).fadeOut();
-		}
-	});
-
-	//Click event to scroll to top
-	$(elm_class).click(function(){
-		$('html, body').animate({scrollTop : 0},800);
-		return false;
-	});
-
-});
-</script>
-So, just add an element to the body, set a class, set it to fixed posi
+	  <button type="button" class="btn btn-primary btn-sm" style="float:right" id="myBtn" onclick="topFunction()">
+          <span class="glyphicon glyphicon-arrow-up"></span> Top
+    </button>	       	
+    </script>
+   	   <script>
+	   window.onscroll = function() {scrollFunction()};
+	   function scrollFunction()
+	   {
+		   if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20)
+		   {
+			   document.getElementById("myBtn").style.display = "block";
+		   }
+		   else
+		   {
+			   document.getElementById("myBtn").style.display = "none";
+		   }
+	   }
+	   function topFunction()
+	   {
+		   document.body.scrollTop = 0;
+		   document.documentElement.scrollTop = 0;
+	   }
+	    </script>
    <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
