--- a/rules.html
+++ b/rules.html
@@ -222,9 +222,8 @@
      <ul>
          <li style="margin-left:50px;color:white;font-size:25px">A tie within an Event is settled by evenly distributing 100GP to each winner</li>
      </ul>
-	  <button type="button" class="btn btn-primary btn-sm" style="float:right" id="myBtn" onclick="topFunction()">
-          <span class="glyphicon glyphicon-arrow-up"></span> Top
-    </button>	       	
+	  <button class="btn btn-primary btn-sm" id="myBtn" onclick="topFunction()">
+	  <span class="glyphicon glyphicon-arrow-up"></span> Top </button>       	
     </script>
    	   <script>
 	   window.onscroll = function() {scrollFunction()};
