--- a/rules.html
+++ b/rules.html
@@ -31,6 +31,17 @@
     {
 	display: none; 
 	position: fixed;
+	bottom: 20px;
+  	right: 30px;
+  	z-index: 99;
+  	font-size: 18px;
+  	border: none;
+  	outline: none;
+  	background-color: red;
+  	color: white;
+  	cursor: pointer;
+  	padding: 15px;
+  	border-radius: 4px;
      }
      #myBtn:hover
 	{
@@ -222,7 +233,7 @@
      <ul>
          <li style="margin-left:50px;color:white;font-size:25px">A tie within an Event is settled by evenly distributing 100GP to each winner</li>
      </ul>
-	  <button class="btn btn-primary btn-sm" id="myBtn" onclick="topFunction()">
+	  <button id="myBtn" onclick="topFunction()">
 	  <span class="glyphicon glyphicon-arrow-up"></span> Top </button>       	
     </script>
    	   <script>
