--- a/rules.html
+++ b/rules.html
@@ -31,16 +31,16 @@
     {
 	display: none; 
 	position: fixed;
-	bottom: 20px;
+	bottom: 10px;
   	right: 30px;
   	z-index: 99;
-  	font-size: 18px;
+  	font-size: 12px;
   	border: none;
   	outline: none;
-  	background-color: red;
+  	background-color: #428bca;
   	color: white;
   	cursor: pointer;
-  	padding: 15px;
+  	padding: 10px;
   	border-radius: 4px;
      }
      #myBtn:hover
