--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -32,6 +32,26 @@
         border-radius: 5px;
         padding: 15px;
     }
+     #myBtn
+    {
+        display: none; 
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        z-index: 99;
+        font-size: 13px;
+        border: none;
+        outline: none;
+        background-color: #428bca;
+        color: white;
+        cursor: pointer;
+        padding: 10px;
+        border-radius: 4px;
+     }
+     #myBtn:hover
+	{
+		background-color: #555;
+	}
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -76,6 +96,7 @@
     <ul class="nav navbar-nav navbar-right">
         <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <a href="https://ku.edu/" class="navbar-right"><img src="kansas-jayhawks-profile.jpg" style="width:45px;height:51px"></a>
     </ul>
     </div> 
     </nav>
@@ -159,12 +180,29 @@
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The COUPP collaboration uses bubble chambers to search for dark matter in the form of Weakly Interacting Massive Particles, or WIMPs.  The bubble chamber fluid, CF3I is superheated 
                 so that the recoiling nucleus from a scattering WIMP will nucleate a single bubble (leave a small amount of energy behind that creates a bubble)."</font></p>
         <hr><br>
-                
+       <script>
+	   window.onscroll = function() {scrollFunction()};
+	   function scrollFunction()
+	   {
+		   if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20)
+		   {
+			   document.getElementById("myBtn").style.display = "block";
+		   }
+		   else
+		   {
+			   document.getElementById("myBtn").style.display = "none";
+		   }
+	   }
+	   function topFunction()
+	   {
+		   document.body.scrollTop = 0;
+		   document.documentElement.scrollTop = 0;
+	   }
+	    </script>
                 
        <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
-             <img src="kansas-jayhawks-profile.jpg" style="float:right;width:40px;height:40px">
        </div>
        </div>
        </div>
