--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -180,7 +180,10 @@
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The COUPP collaboration uses bubble chambers to search for dark matter in the form of Weakly Interacting Massive Particles, or WIMPs.  The bubble chamber fluid, CF3I is superheated 
                 so that the recoiling nucleus from a scattering WIMP will nucleate a single bubble (leave a small amount of energy behind that creates a bubble)."</font></p>
         <hr><br>
-       <script>
+		    
+	<button id="myBtn" onclick="topFunction()">
+	<span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
+       	<script>
 	   window.onscroll = function() {scrollFunction()};
 	   function scrollFunction()
 	   {
@@ -198,7 +201,7 @@
 		   document.body.scrollTop = 0;
 		   document.documentElement.scrollTop = 0;
 	   }
-	    </script>
+	   </script>
                 
        <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
