--- a/indirectdarkmatter.html
+++ b/indirectdarkmatter.html
@@ -35,7 +35,6 @@
     #myBtn
     {
         display: none; 
-        position: fixed;
         bottom: 10px;
         right: 10px;
         z-index: 99;
@@ -145,7 +144,7 @@
             is being studied. AMS will be on the Space Station for at least 10 more years and will provide a sensitive search for dark matter in space."</font></p>    
         <hr>                
                 
-       <button id="myBtn" onclick="topFunction()">
+       	   <button id="myBtn" style="float:right" onclick="topFunction()">
 	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
    	   <script>
 	   window.onscroll = function() {scrollFunction()};
