--- a/indirectdarkmatter.html
+++ b/indirectdarkmatter.html
@@ -145,7 +145,7 @@
             is being studied. AMS will be on the Space Station for at least 10 more years and will provide a sensitive search for dark matter in space."</font></p>    
         <hr>                
                 
-       	   <button id="myBtn" style="float:right" onclick="topFunction()">
+       	   <button id="myBtn" onclick="topFunction()">
 	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
    	   <script>
 	   window.onscroll = function() {scrollFunction()};
