--- a/instructors.html
+++ b/instructors.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://s3.envato.com/files/245463322/atom_tunnel.jpg");
+        background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXi-g9uumecKwOaCLxDCbqMie6cnqv2GJlh2qFVKFlBcG3CyHJng");
     }
     .cd-fixed-bg
     {
