--- a/instructors.html
+++ b/instructors.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://www.miamioh.edu/cas/_files/images/physics/homepage-slides/pendulum.jpg");
+        background-image: url("https://www.wallpaperup.com/uploads/wallpapers/2012/07/28/7493/d53ee454712cfcc88dbc5a217fc2722c-700.jpg");
     }
     .cd-fixed-bg
     {
