--- a/instructors.html
+++ b/instructors.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://www.wallpaperup.com/uploads/wallpapers/2012/07/28/7493/d53ee454712cfcc88dbc5a217fc2722c-700.jpg");
+        background-image: url("https://cdn3.collective-evolution.com/assets/uploads/2016/07/QuantumPhysics.jpg");
     }
     .cd-fixed-bg
     {
