--- a/instructors.html
+++ b/instructors.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://cdn3.collective-evolution.com/assets/uploads/2016/07/QuantumPhysics.jpg");
+        background-image: url("https://cdn-images-1.medium.com/max/1920/1*QnNtiQYyxTrx3CIEPkVYzg.jpeg");
     }
     .cd-fixed-bg
     {
