--- a/instructors.html
+++ b/instructors.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://cdn-images-1.medium.com/max/1920/1*QnNtiQYyxTrx3CIEPkVYzg.jpeg");
+        background-image: url("https://www.walldevil.com/wallpapers/a56/sky-galaxy-cloud-star-planet-night.jpg");
     }
     .cd-fixed-bg
     {
