--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -32,6 +32,26 @@
         border-radius: 5px;
         padding: 15px;
     }	
+    #myBtn
+    {
+        display: none; 
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        z-index: 99;
+        font-size: 13px;
+        border: none;
+        outline: none;
+        background-color: #428bca;
+        color: white;
+        cursor: pointer;
+        padding: 10px;
+        border-radius: 4px;
+     }
+     #myBtn:hover
+     {
+	background-color: #555;
+     }
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -109,15 +129,28 @@
     </table>
     <a href="thehunt.pdf" style="color:white"><u>The Hunt pdf View</u></a>		    
     <br><br><br><br>
-    <button type="button" class="btn btn-primary btn-sm" style="float:right" onclick="scrollWin()">
-          <span class="glyphicon glyphicon-arrow-up"></span> Top
-    </button>	       	
-    <script>
-       function scrollWin()
-       {
-       	     window.scrollTo(0, 0);
-       }
-    </script>
+	       
+     	   <button id="myBtn" onclick="topFunction()">
+	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
+   	   <script>
+	   window.onscroll = function() {scrollFunction()};
+	   function scrollFunction()
+	   {
+		   if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20)
+		   {
+			   document.getElementById("myBtn").style.display = "block";
+		   }
+		   else
+		   {
+			   document.getElementById("myBtn").style.display = "none";
+		   }
+	   }
+	   function topFunction()
+	   {
+		   document.body.scrollTop = 0;
+		   document.documentElement.scrollTop = 0;
+	   }
+	    </script>
     <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
