--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -109,16 +109,16 @@
             this current stage of the evolution of our Universe constitute 27% and 68% of its total energy content. We call these components "dark" since unlike normal matter, they do not 
             emit or absorb any form of light: we can not “see” them, not even indirectly by them “blocking” light from other objects like stars or galaxies."</p>
         <h3 style="color:white"><a href="http://lz.lbl.gov/" style="color:white"><u>LUX-ZEPLIN (LZ)</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white"><font size="3">LZ is a next generation dark matter experiment; the LZ detector consists of 10 tonnes total 
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"LZ is a next generation dark matter experiment; the LZ detector consists of 10 tonnes total 
             of liquified xenon to detect faint interactions between galactic dark matter and regular matter. Dark matter comprises about 85% of the mass of the Universe, 
-            and its particle nature is still unknown.</font></p>            
+            and its particle nature is still unknown."</font></p>            
         <hr>
-        <h3><a href="http://darkmatter.ethz.ch/Argon_Dark_Matter_%28ArDM%29/Welcome.html" style="color:white"><u>ArDM (Argon Dark Matter Experiment)</u></a></h3>
+        <h3><a href="http://darkmatter.ethz.ch/Argon_Dark_Matter_%28ArDM%29/Welcome.html" style="color:white"><u>"ArDM (Argon Dark Matter Experiment)</u></a></h3>
         <p class="round1" style="margin-left:20px;color:white"><font size="3">The ArDM (Argon Dark Matter) Experiment aims at direct Dark Matter detection based on a ton-scale 
             liquid argon (LAr) double-phase time projection chamber (TPC). The ArDM-1t detector is the largest two-phase liquid argon detector for Dark Matter Searches in the world."</font></p>            
         <hr>
         <h3><a href="http://www-sk.icrr.u-tokyo.ac.jp/xmass/about/index-e.html" style="color:white"><u>XMASS</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white"><font size="3">The XMASS experiment aims to directly detect the cold dark matter using liquid Xenon (at about -100℃). Dark matter is 
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The XMASS experiment aims to directly detect the cold dark matter using liquid Xenon (at about -100℃). Dark matter is 
             unknown matter which is 5~6 times quantity of ordinary visible matter in the universe. Dark matter plays an important role to form the present structure of the universe. If the direct 
             detection of the dark matter is achieved, it can be a great help to solve the mysteries of the universe and also to discover new particles."</font></p>     
         <hr>                
