--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -104,7 +104,7 @@
        <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
      <h2 style="color:white"><b><i>The Hunt</b></i></h2> 
-     <p class="round1" style="color:white">You have found your way to <i>The Hunt</i> - now take a look at how Fantasy Physics hunts for and 
+     <p class="round1" style="color:white"><font size="4">You have found your way to <i>The Hunt</i> - now take a look at how Fantasy Physics hunts for and 
 	     administers points to each Crew Member.</p>
      <br>		    
      <table colspan="3" class="table table-bordered" style="color:white">
