--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -80,7 +80,7 @@
         <a class="dropdown-toggle" data-toggle="dropdown" href="teamrosters.html">The Crew
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="directdarkmatter.html">Direct Dark Matter Members</a></li>
+          <li><a href="directdarkmatter.html">WIMP Dark Matter Members</a></li>
           <li><a href="indirectdarkmatter.html">Indirect Dark Matter Members</a></li>
           <li><a href="neutrinos.html">Neutrino Members</a></li>
           <li><a href="astroparticle.html">Astroparticle Members</a></li>
@@ -103,7 +103,7 @@
         <div class="w3-container">
         <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
-        <h2 style="color:white"><b><i><u><a href="http://www-sk.icrr.u-tokyo.ac.jp/xmass/darkmatter/index-e.html" style="color:white">Direct Dark Matter</u> Members</b></i></a></h2>
+        <h2 style="color:white"><b><i><a href="http://www-sk.icrr.u-tokyo.ac.jp/xmass/darkmatter/index-e.html" style="color:white">WIMP <u>Direct Dark Matter</u> Members</b></i></a></h2>
         <p style="color:white">"Investigating the composition of our Universe, we find that only 5% of it consists of matter that we know; matter that consists of electrons, protons, 
             and neutrons and emits and absorbs photons and neutrinos. We find that the remaining 95% comes from two more components: Dark matter and dark energy. These two components at 
             this current stage of the evolution of our Universe constitute 27% and 68% of its total energy content. We call these components "dark" since unlike normal matter, they do not 
