--- a/instructors.html
+++ b/instructors.html
@@ -103,7 +103,7 @@
       <div class="w3-container">
       <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
       <div class="cd-scrolling-bg__content">
-	<p style="color:white"><font size="4">Below are extra resources for educators depending on the level being taught. Resources range from
+	<p class="round1" style="color:white"><font size="4">Below are extra resources for educators depending on the level being taught. Resources range from
 		crash course and introduction videos, to lesson plans coupled with activities, to explanations
 		behind real-world scenarios of physics.</p></font>
 	      
