--- a/instructors.html
+++ b/instructors.html
@@ -106,9 +106,9 @@
 <br>
 	<p class="round1" style="color:white"><font size="4">Below are extra resources for you, the educators,
 		organized by school institution, ranging from crash course and introduction videos, to lesson 
-		plans coupled with activities, to explanations behind real-world scenarios of physics.<br>We hope
-		that these resources, coupled with the Fantasy Physics gameplay, will pique your students' interest 
-		into the science that explains the Universe: physics.</p></font>
+		plans coupled with activities, to explanations behind real-world scenarios of physics.<br><br>
+		We hope that these resources, coupled with the Fantasy Physics gameplay, will pique your 
+		students' interest into the science that explains the Universe: physics.</p></font>
 <br>	      
 	<h3 style="color:white"><b><i>Middle School Instructors</b></i></h2> 
 	      <p class="round1" style="color:white"></p>
