--- a/instructors.html
+++ b/instructors.html
@@ -119,6 +119,9 @@
 	      <h3 style="color:white"><b><i>University Instructors</b></i></h2>
 	      <p class="round1" style="color:white"></p>
 <br>	      
+	      <h3 style="color:white"><b><i>Suitable for All Instructors</b></i></h2>
+	      <p class="round1" style="color:white"></p>
+	      
            <button id="myBtn" onclick="topFunction()">
 	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
    	   <script>
