--- a/instructors.html
+++ b/instructors.html
@@ -111,16 +111,19 @@
 		students' interest into the science that explains the Universe: physics.</p></font>
 <br>	      
 	<h3 style="color:white"><b><i>Middle School Instructors</b></i></h2> 
-	      <p class="round1" style="color:white"><ul>
-	      <li><a href="https://www.pbslearningmedia.org/resource/physics-music-braincraft/physics-music-braincraft/#.W3MF-ehKg2w">Crash Course Video - The Physics of Music</a></li>
-	      <li><a href="https://www.pbslearningmedia.org/resource/kqed09.sci.phys.maf.kqedsailing/the-physics-of-sailing/#.W3MHIehKg2w">QUEST Video: The Physics of Sailing</a></li>
-	      <li><a href="https://www.pbslearningmedia.org/resource/sf10.sci.psci.forces.motion.basketball/physics-of-basketball/#.W3MHWuhKg2w">The Physics of Basketball Video</a></li>
-	      <li><a href="https://www.pbslearningmedia.org/resource/curveball-magnus-effect-physicsgirl-video-1011/the-physics-behind-a-curveball-the-magnus-effect-physics-girl/#.W3MIYehKg2w">Physics Behind a Curveball Video - The Magnus Effect</a></li>
-	      <li><a href="http://www.atomicarchive.com/sciencemenu.shtml">The Science Behind Nuclear Weapons</a></li>
-	      <li><a href="http://aspire.cosmic-ray.org/">Astrophysics Lesson Plans & Student Labs</a></li>
-	      <li><a href="https://www.compadre.org/precollege/features/featureArchive.cfm?Type=LessonPlan">American Association of Physics Teachers Lesson Plans</a></li>
-	      <li><a href="http://cwp.library.ucla.edu/">Contributions of 20<sup>th</sup> Century Women to Physics</a></li>
-	      <li><a href="https://www.nsf.gov/news/overviews/physics/index.jsp">National Science Foundation Physics Overview (Higher Level)</a></li></ul></p>
+	      <p class="round1" style="color:white">
+	      <ul>
+	      	<li><a href="https://www.pbslearningmedia.org/resource/physics-music-braincraft/physics-music-braincraft/#.W3MF-ehKg2w" style="color:white">Crash Course Video - The Physics of Music</a></li>
+	      	<li><a href="https://www.pbslearningmedia.org/resource/kqed09.sci.phys.maf.kqedsailing/the-physics-of-sailing/#.W3MHIehKg2w" style="color:white">QUEST Video: The Physics of Sailing</a></li>
+	      	<li><a href="https://www.pbslearningmedia.org/resource/sf10.sci.psci.forces.motion.basketball/physics-of-basketball/#.W3MHWuhKg2w" style="color:white">The Physics of Basketball Video</a></li>
+	      	<li><a href="https://www.pbslearningmedia.org/resource/curveball-magnus-effect-physicsgirl-video-1011/the-physics-behind-a-curveball-the-magnus-effect-physics-girl/#.W3MIYehKg2w" style="color:white">Physics Behind a Curveball Video - The Magnus Effect</a></li>
+	      	<li><a href="http://www.atomicarchive.com/sciencemenu.shtml" style="color:white">The Science Behind Nuclear Weapons</a></li>
+	      	<li><a href="http://aspire.cosmic-ray.org/" style="color:white">Astrophysics Lesson Plans & Student Labs</a></li>
+	      	<li><a href="https://www.compadre.org/precollege/features/featureArchive.cfm?Type=LessonPlan" style="color:white">American Association of Physics Teachers Lesson Plans</a></li>
+	      	<li><a href="http://cwp.library.ucla.edu/" style="color:white">Contributions of 20<sup>th</sup> Century Women to Physics</a></li>
+	      	<li><a href="https://www.nsf.gov/news/overviews/physics/index.jsp" style="color:white">National Science Foundation Physics Overview (Higher Level)</a></li>
+	      </ul>
+	      </p>
 <br>	      
 	      <h3 style="color:white"><b><i>High School Instructors</b></i></h2>
 	      <p class="round1" style="color:white">
