--- a/instructors.html
+++ b/instructors.html
@@ -111,9 +111,8 @@
 		students' interest into the science that explains the Universe: physics.</p></font>
 <br>	      
 	<h3 style="color:white"><b><i>Middle School Instructors</b></i></h2> 
-	      <p class="round1" style="color:white">
-	      <ul>
-	      	<li><a href="https://www.pbslearningmedia.org/resource/physics-music-braincraft/physics-music-braincraft/#.W3MF-ehKg2w" style="color:white">Crash Course Video - The Physics of Music</a></li>
+	      <ul class="round1" style="color:white">
+	      	<li><a href="https://www.pbslearningmedia.org/resource/physics-music-braincraft/physics-music-braincraft/#.W3MF-ehKg2w">Crash Course Video - The Physics of Music</a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/kqed09.sci.phys.maf.kqedsailing/the-physics-of-sailing/#.W3MHIehKg2w" style="color:white">QUEST Video: The Physics of Sailing</a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/sf10.sci.psci.forces.motion.basketball/physics-of-basketball/#.W3MHWuhKg2w" style="color:white">The Physics of Basketball Video</a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/curveball-magnus-effect-physicsgirl-video-1011/the-physics-behind-a-curveball-the-magnus-effect-physics-girl/#.W3MIYehKg2w" style="color:white">Physics Behind a Curveball Video - The Magnus Effect</a></li>
