--- a/instructors.html
+++ b/instructors.html
@@ -106,7 +106,8 @@
 <br>
 	<p class="round1" style="color:white"><font size="4">Below are extra resources for you, the educators,
 		organized by school institution, ranging from crash course and introduction videos, to lesson 
-		plans coupled with activities, to explanations behind real-world scenarios of physics.<br><br>
+		plans coupled with activities, to explanations behind real-world scenarios of physics. For your
+		convenience, all resources are linked.<br><br>
 		We hope that these resources, coupled with the Fantasy Physics gameplay, will pique your 
 		students' interest into the science that explains the Universe: physics.</p></font>
 <br>	      
@@ -121,8 +122,8 @@
 	      	<li><a href="https://www.compadre.org/precollege/features/featureArchive.cfm?Type=LessonPlan" style="color:white"><u>American Association of Physics Teachers Lesson Plans</u></a></li>
 	      	<li><a href="http://cwp.library.ucla.edu/" style="color:white"><u>Contributions of 20<sup>th</sup> Century Women to Physics</u></a></li>
 	      	<li><a href="https://www.nsf.gov/news/overviews/physics/index.jsp" style="color:white"><u>National Science Foundation Physics Overview (Higher Level)</u></a></li>
-		<li><a href="https://www.teachengineering.org/curriculum/browse?subjectArea=Physics">TeachEngineering Lessons & Student Labs</a></li>
-		<li><a href="https://www.pbslearningmedia.org/resource/nvwtp-sci-physicstexting/wgbh-nova-what-the-physics-the-physics-behind-texting/#.W3MRwuhKg2w">The Physics Behind Texting Video</a></li>			      
+		<li><a href="https://www.teachengineering.org/curriculum/browse?subjectArea=Physics" style="color:white">TeachEngineering Lessons & Student Labs</a></li>
+		<li><a href="https://www.pbslearningmedia.org/resource/nvwtp-sci-physicstexting/wgbh-nova-what-the-physics-the-physics-behind-texting/#.W3MRwuhKg2w" style="color:white">The Physics Behind Texting Video</a></li>			      
 	      </ul></font>
 <br>	      
 	      <h3 style="color:white"><b><i>High School Instructors</b></i></h2>
