--- a/instructors.html
+++ b/instructors.html
@@ -113,6 +113,7 @@
 <br>	      
 	<h3 style="color:white"><b><i>Middle School Instructors</b></i></h2> 
 	      <ul class="round1" style="color:white"><font size="3">
+		<li><a href="https://home.cern/about">General Information on Various Physics Subjects, Accelerators, and Experiments from CERN</a></li>      
 	      	<li><a href="https://www.pbslearningmedia.org/resource/physics-music-braincraft/physics-music-braincraft/#.W3MF-ehKg2w" style="color:white"><u>Crash Course Video - The Physics of Music</u></a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/kqed09.sci.phys.maf.kqedsailing/the-physics-of-sailing/#.W3MHIehKg2w" style="color:white"><u>QUEST Video: The Physics of Sailing</u></a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/sf10.sci.psci.forces.motion.basketball/physics-of-basketball/#.W3MHWuhKg2w" style="color:white"><u>The Physics of Basketball Video</u></a></li>
