--- a/instructors.html
+++ b/instructors.html
@@ -113,7 +113,7 @@
 <br>	      
 	<h3 style="color:white"><b><i>Middle School Instructors</b></i></h2> 
 	      <ul class="round1" style="color:white"><font size="3">
-		<li><a href="https://home.cern/about">General Information on Various Physics Subjects, Accelerators, and Experiments from CERN</a></li>      
+		<li><a href="https://home.cern/about"><u>General Information on Various Physics Subjects, Accelerators, and Experiments from CERN</u></a></li>      
 	      	<li><a href="https://www.pbslearningmedia.org/resource/physics-music-braincraft/physics-music-braincraft/#.W3MF-ehKg2w" style="color:white"><u>Crash Course Video - The Physics of Music</u></a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/kqed09.sci.phys.maf.kqedsailing/the-physics-of-sailing/#.W3MHIehKg2w" style="color:white"><u>QUEST Video: The Physics of Sailing</u></a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/sf10.sci.psci.forces.motion.basketball/physics-of-basketball/#.W3MHWuhKg2w" style="color:white"><u>The Physics of Basketball Video</u></a></li>
@@ -123,8 +123,8 @@
 	      	<li><a href="https://www.compadre.org/precollege/features/featureArchive.cfm?Type=LessonPlan" style="color:white"><u>American Association of Physics Teachers Lesson Plans</u></a></li>
 	      	<li><a href="http://cwp.library.ucla.edu/" style="color:white"><u>Contributions of 20<sup>th</sup> Century Women to Physics</u></a></li>
 	      	<li><a href="https://www.nsf.gov/news/overviews/physics/index.jsp" style="color:white"><u>National Science Foundation Physics Overview (Higher Level)</u></a></li>
-		<li><a href="https://www.teachengineering.org/curriculum/browse?subjectArea=Physics" style="color:white">TeachEngineering Lessons & Student Labs</a></li>
-		<li><a href="https://www.pbslearningmedia.org/resource/nvwtp-sci-physicstexting/wgbh-nova-what-the-physics-the-physics-behind-texting/#.W3MRwuhKg2w" style="color:white">The Physics Behind Texting Video</a></li>			      
+		<li><a href="https://www.teachengineering.org/curriculum/browse?subjectArea=Physics" style="color:white"><u>TeachEngineering Lessons & Student Labs</u></a></li>
+		<li><a href="https://www.pbslearningmedia.org/resource/nvwtp-sci-physicstexting/wgbh-nova-what-the-physics-the-physics-behind-texting/#.W3MRwuhKg2w" style="color:white"><u>The Physics Behind Texting Video</u></a></li>			      
 	      </ul></font>
 <br>	      
 	      <h3 style="color:white"><b><i>High School Instructors</b></i></h2>
