--- a/instructors.html
+++ b/instructors.html
@@ -112,12 +112,12 @@
 		students' interest into the science that explains the Universe: physics.</p></font>
 <br>	      
 	<h3 style="color:white"><b><i>Middle School Instructors</b></i></h2> 
-	      <ul class="round1" style="color:white"><font size="3">
-		<li><a href="https://home.cern/about"><u>General Information on Various Physics Subjects, Accelerators, and Experiments from CERN</u></a></li>      
+	      <ul class="round1" style="color:white"><font size="3">      
 	      	<li><a href="https://www.pbslearningmedia.org/resource/physics-music-braincraft/physics-music-braincraft/#.W3MF-ehKg2w" style="color:white"><u>Crash Course Video - The Physics of Music</u></a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/kqed09.sci.phys.maf.kqedsailing/the-physics-of-sailing/#.W3MHIehKg2w" style="color:white"><u>QUEST Video: The Physics of Sailing</u></a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/sf10.sci.psci.forces.motion.basketball/physics-of-basketball/#.W3MHWuhKg2w" style="color:white"><u>The Physics of Basketball Video</u></a></li>
-	      	<li><a href="https://www.pbslearningmedia.org/resource/curveball-magnus-effect-physicsgirl-video-1011/the-physics-behind-a-curveball-the-magnus-effect-physics-girl/#.W3MIYehKg2w" style="color:white"><u>Physics Behind a Curveball Video - The Magnus Effect</u></a></li>
+	      	<li><a href="https://home.cern/about" style="color:white"><u>General Information on Various Physics Subjects, Accelerators, and Experiments from CERN (Higher Level)</u></a></li>
+		<li><a href="https://www.pbslearningmedia.org/resource/curveball-magnus-effect-physicsgirl-video-1011/the-physics-behind-a-curveball-the-magnus-effect-physics-girl/#.W3MIYehKg2w" style="color:white"><u>Physics Behind a Curveball Video - The Magnus Effect</u></a></li>
 	      	<li><a href="http://www.atomicarchive.com/sciencemenu.shtml" style="color:white"><u>The Science Behind Nuclear Weapons</u></a></li>
 	      	<li><a href="http://aspire.cosmic-ray.org/" style="color:white"><u>Astrophysics Lessons & Student Labs</u></a></li>
 	      	<li><a href="https://www.compadre.org/precollege/features/featureArchive.cfm?Type=LessonPlan" style="color:white"><u>American Association of Physics Teachers Lesson Plans</u></a></li>
@@ -125,11 +125,10 @@
 	      	<li><a href="https://www.nsf.gov/news/overviews/physics/index.jsp" style="color:white"><u>National Science Foundation Physics Overview (Higher Level)</u></a></li>
 		<li><a href="https://www.teachengineering.org/curriculum/browse?subjectArea=Physics" style="color:white"><u>TeachEngineering Lessons & Student Labs</u></a></li>
 		<li><a href="https://www.pbslearningmedia.org/resource/nvwtp-sci-physicstexting/wgbh-nova-what-the-physics-the-physics-behind-texting/#.W3MRwuhKg2w" style="color:white"><u>The Physics Behind Texting Video</u></a></li>			      
-	      </ul></font>
 <br>	      
 	      <h3 style="color:white"><b><i>High School Instructors</b></i></h2>
 	      <ul class="round1" style="color:white"><font size="3">
-		      
+		<li><a href="https://ippex.pppl.gov/"><u>Interactive Plasma Physics Education Experience</u></a></li>		     
 	      </ul></font>		      
 <br>	      
 	      <h3 style="color:white"><b><i>University Instructors</b></i></h2>
