--- a/instructors.html
+++ b/instructors.html
@@ -129,13 +129,14 @@
 	      <h3 style="color:white"><b><i>High School Instructors</b></i></h2>
 	      <ul class="round1" style="color:white"><font size="3">
 		<li><a href="https://ippex.pppl.gov/" style="color:white"><u>Interactive Plasma Physics Education Experience</u></a></li>		     
-		<li><a href="http://www.physics.umd.edu/rgroups/ripe/perg/abp/"><u>Activity Based Physics</u></a></li>
-		<li><a href="https://blossoms.mit.edu/resources/physics_resources"><u>MIT Blossoms Physics Resources</u></a></li>
-		<li><a href="https://www.physicsclassroom.com/"><u>The Interactive Physics Classroom</u></a></li>	      
-		<li><a href="http://www.learner.org/courses/physics/index.html"><u>Physics for the 21st Century</u></a></li>		      
-		<li><a href="https://www.adoptaphysicist.org/">Adopt-a-Physicist</u></a></li>				      
-		<li><a href="https://www.aps.org/programs/education/highschool/teachers/index.cfm"><u>American Physical Society High School Teacher Resources</u></a></li>		      
-		<li><a href="https://psrc.aapt.org/?"><u>The Physical Sciences Resource Center</u></a></li>		      
+		<li><a href="http://www.physics.umd.edu/rgroups/ripe/perg/abp/" style="color:white"><u>Activity Based Physics</u></a></li>
+		<li><a href="https://blossoms.mit.edu/resources/physics_resources" style="color:white"><u>MIT Blossoms Physics Resources</u></a></li>
+		<li><a href="https://www.physicsclassroom.com/" style="color:white"><u>The Interactive Physics Classroom</u></a></li>	      
+		<li><a href="http://www.learner.org/courses/physics/index.html" style="color:white"><u>Physics for the 21st Century</u></a></li>		      
+		<li><a href="https://www.adoptaphysicist.org/" style="color:white">Adopt-a-Physicist</u></a></li>				      
+		<li><a href="https://www.aps.org/programs/education/highschool/teachers/index.cfm" style="color:white"><u>American Physical Society High School Teacher Resources</u></a></li>		      
+		<li><a href="https://psrc.aapt.org/?" style="color:white"><u>The Physical Sciences Resource Center</u></a></li>	
+		<p style="color:white"><i>The above listed resources for Middle School Instructors can also be used for High School students.</i></p>		      
 	      </ul></font></ul></font>	      
 <br>	      
 	      <h3 style="color:white"><b><i>University Instructors</b></i></h2>
