--- a/instructors.html
+++ b/instructors.html
@@ -111,7 +111,7 @@
 		We hope that these resources, coupled with the Fantasy Physics gameplay, will pique your 
 		students' interest into the science that explains the Universe: physics.</p></font>
 <br>	      
-	<h3 style="color:white"><b><i>Middle School Instructors</b></i></h2> 
+	      <h3 style="color:white"><b><i>Middle School Instructors</b></i></h2> 
 	      <ul class="round1" style="color:white"><font size="3">      
 	      	<li><a href="https://www.pbslearningmedia.org/resource/physics-music-braincraft/physics-music-braincraft/#.W3MF-ehKg2w" style="color:white"><u>Crash Course Video - The Physics of Music</u></a></li>
 	      	<li><a href="https://www.pbslearningmedia.org/resource/kqed09.sci.phys.maf.kqedsailing/the-physics-of-sailing/#.W3MHIehKg2w" style="color:white"><u>QUEST Video: The Physics of Sailing</u></a></li>
@@ -133,9 +133,10 @@
 		<li><a href="https://blossoms.mit.edu/resources/physics_resources" style="color:white"><u>MIT Blossoms Physics Resources</u></a></li>
 		<li><a href="https://www.physicsclassroom.com/" style="color:white"><u>The Interactive Physics Classroom</u></a></li>	      
 		<li><a href="http://www.learner.org/courses/physics/index.html" style="color:white"><u>Physics for the 21st Century</u></a></li>		      
-		<li><a href="https://www.adoptaphysicist.org/" style="color:white">Adopt-a-Physicist</u></a></li>				      
+		<li><a href="https://www.adoptaphysicist.org/" style="color:white"><u>Adopt-a-Physicist</u></a></li>				      
 		<li><a href="https://www.aps.org/programs/education/highschool/teachers/index.cfm" style="color:white"><u>American Physical Society High School Teacher Resources</u></a></li>		      
 		<li><a href="https://psrc.aapt.org/?" style="color:white"><u>The Physical Sciences Resource Center</u></a></li>	
+		<li><a href="https://www.khanacademy.org/science/physics"><u>Khan Academy Physics</u></a></li><br>		      
 		<p style="color:white"><i>The above listed resources for Middle School Instructors can also be used for High School students.</i></p>		      
 	      </ul></font></ul></font>	      
 <br>	      
