--- a/instructors.html
+++ b/instructors.html
@@ -142,16 +142,16 @@
 <br>	      
 	      <h3 style="color:white"><b><i>University Instructors</b></i></h2>
 	      <ul class="round1" style="color:white"><font size="3">
-		<li><a href="https://openstax.org/details/college-physics?Book%20details"><u>OpenStax Free College Physics Textbook</u></a></li>		      
-		<li><a href="http://www.wolframalpha.com/input/?i=physics"><u>Wolfram Alpha Physics</u></a></li>		      
-		<li><a href="https://www.aapt.org/Publications/ajp.cfm"><u>American Journal of Physics</u></a></li>		      
-		<li><a href="https://www.aapt.org/Publications/tpt.cfm"><u>The Physics Teacher</u></a></li>
-		<li><a href="http://www.compadre.org/picup/"><u>Partnership for Integration of Computation into Undergraduate Physics</u></a></li>		      
-		<li><a href="http://www.compadre.org/osp/"><u>Open Source Physics</u>; engages students in physics, computation, and computer modeling</a></li>		    
-		<li><a href="http://www.compadre.org/jtupp/"><u>Phys21: Preparing Physics Students for 21<sup>st</sup> Century Careers</u>; provides guidance for
+		<li><a href="https://openstax.org/details/college-physics?Book%20details" style="color:white"><u>OpenStax Free College Physics Textbook</u></a></li>		      
+		<li><a href="http://www.wolframalpha.com/input/?i=physics" style="color:white"><u>Wolfram Alpha Physics</u></a></li>		      
+		<li><a href="https://www.aapt.org/Publications/ajp.cfm" style="color:white"><u>American Journal of Physics</u></a></li>		      
+		<li><a href="https://www.aapt.org/Publications/tpt.cfm" style="color:white"><u>The Physics Teacher</u></a></li>
+		<li><a href="http://www.compadre.org/picup/" style="color:white"><u>Partnership for Integration of Computation into Undergraduate Physics</u></a></li>		      
+		<li><a href="http://www.compadre.org/osp/" style="color:white"><u>Open Source Physics</u>; engages students in physics, computation, and computer modeling</a></li>		    
+		<li><a href="http://www.compadre.org/jtupp/" style="color:white"><u>Phys21: Preparing Physics Students for 21<sup>st</sup> Century Careers</u>; provides guidance for
 			physicists considering revising the undergraduate curriculum</a></li>
-		<li><a href="https://www.physport.org/index.cfm?"><u>PhysPort</u>; resources based on physics education research</a></li>		      
-		<li><a href="https://www.aapt.org/Resources/"><u>Additional Resources from the American Association of Physics Teachers</u></a></li>	      
+		<li><a href="https://www.physport.org/index.cfm?" style="color:white"><u>PhysPort</u>; resources based on physics education research</a></li>		      
+		<li><a href="https://www.aapt.org/Resources/" style="color:white"><u>Additional Resources from the American Association of Physics Teachers</u></a></li>	      
 	      </ul></font>
 <br>	      
 	      <p class="round1" style="color:white"><font size="4">Although this resource list we have compiled is incomplete, we hope that they help and lead to further
