--- a/instructors.html
+++ b/instructors.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://markinternational.info/data/out/531/223543947-tesla-coil-wallpaper.jpg");
+        background-image: url("https://i.pinimg.com/originals/4f/d0/23/4fd0239436293f5bf0a41fe952743a5b.jpg");
     }
     .cd-fixed-bg
     {
