--- a/instructors.html
+++ b/instructors.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://i.pinimg.com/originals/4f/d0/23/4fd0239436293f5bf0a41fe952743a5b.jpg");
+        background-image: url("https://upload.wikimedia.org/wikipedia/commons/b/b2/225W_Tesla_coil_-_arcs_%28cropped%29.jpg");
     }
     .cd-fixed-bg
     {
