--- a/instructors.html
+++ b/instructors.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://upload.wikimedia.org/wikipedia/commons/b/b2/225W_Tesla_coil_-_arcs_%28cropped%29.jpg");
+        background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/UhGJuGw/tesla-coil-electrical-plasma-arcs-and-rays-loop_nj0muksnl__F0000.png");
     }
     .cd-fixed-bg
     {
