--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
         align-items: center;
         justify-content: space-between;
     }
+     .center
+    {
+        padding: 95px 0;
+        text-align: center;
+    }
+    .footer
+    {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        height: 40px;
+       
+        color: white;
+    }
     .background-img
     {
         position: fixed;
@@ -82,7 +96,7 @@
          <h1 style="text-align:center;color:white"><font face="sans-serif"><i> FANTASY PHYSICS <i></h1>
          <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3> 
      </div>                 
-     <div class="flex-container">
+     <div class="footer">
          <i><p style="margin-left:8px">Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> | 
          <u><a href="about.html" style="color:white">About</u></a> | <u><a href="creators.html" style="color:white">The Creators</i></u></a></p>
      </div>
