--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <li><a href="instructors.html">The Instructors</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="signup.html" style="color:white"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
-        <li><a href="login.html" style="color:white"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
+        <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         <a href="https://ku.edu/" class="navbar-right"><img src="kansas-jayhawks-profile.jpg" style="width:45px;height:51px"></a>
     </ul>
      </div>
