--- a/creators.html
+++ b/creators.html
@@ -103,7 +103,10 @@
         <div class="w3-container">
         <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
- 
+ 	
+	<h2 style="color:white"><b><i>The Creators Behind Fantasy Physics</b></i></h2><br>
+	<p class="round1" style="color:white"><img src="https://physics.ku.edu/sites/physics.ku.edu/files/Rogan_Christopher%20S_%20PROV-02685_1702685_Aug%2015_180x225px.jpg"></p>		    
+			    
       
        <button id="myBtn" onclick="topFunction()">
 	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
