--- a/creators.html
+++ b/creators.html
@@ -109,12 +109,12 @@
             <div class="cd-scrolling-bg__content">
  	
 	<h2 style="color:white"><b><i>The Creators Behind Fantasy Physics</b></i></h2><br>
-	<div class="clearfix">		    
-	<p class="round1" style="color:white"><img src="https://physics.ku.edu/sites/physics.ku.edu/files/Rogan_Christopher%20S_%20PROV-02685_1702685_Aug%2015_180x225px.jpg" style="float:left">
+	<div class="clearfix" class="round1" style="color:white">		    
+	<img src="https://physics.ku.edu/sites/physics.ku.edu/files/Rogan_Christopher%20S_%20PROV-02685_1702685_Aug%2015_180x225px.jpg" style="float:left">
 		Professor Christopher Rogan has been the J.D. Stranthan Assistant Professor of Experimental Physics at the University of Kansas'
 		Department of Physics and Astronomy since August of 2017. He received his A.B. from the Department of Physics at Princeton University
 		and both his Masters of Science and Ph.D. degrees from the California Institute of Technology; his research focuses on 
-		<a href="http://kuhep.ku.edu/"><u>Experimental High Energy.</u></a></p></div>	    
+		<a href="http://kuhep.ku.edu/"><u>Experimental High Energy.</u></a></div>	    
 			    
       
        <button id="myBtn" onclick="topFunction()">
